src/objects/asb_Store__c.object
<CustomObject>
    <description>Branding and settings for the store.</description>
    <fields>
        <fullName>AppTypes__c</fullName>
        <description>The types of apps that can be listed in the store.</description>
        <inlineHelpText>The types of apps that can be listed in the store.</inlineHelpText>
        <label>App Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnableChatter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if Chatter is enabled to facilitate communication and collaboration around the app. Only available if Chatter is enabled in the Salesforce organization.</description>
        <inlineHelpText>Indicates if Chatter is enabled to facilitate communication and collaboration around the app. Only available if Chatter is enabled in the Salesforce organization.</inlineHelpText>
        <label>Enable Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveApps__c</fullName>
        <description>The number of apps that are currently listed in the store and available for install.</description>
        <inlineHelpText>The number of apps that are currently listed in the store and available for install.</inlineHelpText>
        <label>Published Apps</label>
        <summaryFilterItems>
            <field>asb_App__c.LiveListings__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>asb_App__c.Store__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PageViewsAllTime__c</fullName>
        <description>The total number page views of listings in the store over all time.</description>
        <inlineHelpText>The total number page views of listings in the store over all time.</inlineHelpText>
        <label>Page Views (All Time)</label>
        <summarizedField>asb_App__c.PageViewsAllTime__c</summarizedField>
        <summaryForeignKey>asb_App__c.Store__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PopularityAllTime__c</fullName>
        <description>The total installs done on listings in the store over all time.</description>
        <inlineHelpText>The total installs done on listings in the store over all time.</inlineHelpText>
        <label>Installs</label>
        <summarizedField>asb_App__c.PopularityAllTime__c</summarizedField>
        <summaryForeignKey>asb_App__c.Store__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Describes whether the store is online and available to standard users or offline and available only to store administrators.</description>
        <inlineHelpText>Describes whether the store is online and available to standard users or offline and available only to store administrators.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offline</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Store</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>